--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <script src="//cdn.hotolab.net/face-api.js/face-api.min.js"></script>
   <script defer src="script.js"></script>
   <style>
+    body {
+      background-color: #333;
+      color: #fff;
+    }
     main {
       position: relative;
     }
